BE-602 Swagger updates
