# swagger.json
@@ -199,133 +199,6 @@
         }
       }
     },
-    "/channel": {
-      "post": {
-        "tags": ["Channel"],
-        "summary": "Create New channel on target peers  ",
-        "description": "Create New channel on target peers",
-        "consumes": ["application/x-www-form-urlencoded"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "channelName",
-            "in": "formData",
-            "description": "channel name",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "genesisBlock",
-            "in": "formData",
-            "description": "gensis block",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "orgName",
-            "in": "formData",
-            "description": "organation name ",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "channelArtificats",
-            "in": "formData",
-            "description": "channelArtificats",
-            "required": true,
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "profile",
-            "in": "formData",
-            "description": "block profile",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean"
-                },
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "Unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/joinChannel": {
-      "post": {
-        "tags": ["Channel"],
-        "summary": "join channel ",
-        "description": "join  channel ",
-        "consumes": ["application/json", "application/x-www-form-urlencoded"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "description": "payload",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "channelName": {
-                  "type": "string"
-                },
-                "orgName": {
-                  "type": "string"
-                },
-                "peers": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean"
-                },
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "Unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
     "/block/{channel_genesis_hash}/{number}": {
       "get": {
         "tags": ["Blocks"],
